--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 	{% endif %}
 {% endfor %}
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
 <title>{{ page.title }} | Usecue web development</title>
 <meta charset="utf-8" /> 
