--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
   ga('send', 'pageview');
 
 </script>
-<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="/js/particles.min.js"></script>
 
 </body>
 
