--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,16 +29,10 @@
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
 <link rel="apple-touch-icon" href="/img/icon-196x196.png" />
 <meta id="viewport" name="viewport" content="width=device-width">
-<script src="//code.jquery.com/jquery-1.7.2.min.js"></script>
+<script src="/js/jquery-1.7.2.min.js"></script>
 <script src="/js/typed.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/style.css">
-<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 <script>
-/*
-if (location.protocol != 'https:') {
- location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-}
-*/
 
 function next() {
 	if(document.getElementById('body').className == 'menu') {
