--- a/css/style.css
+++ b/css/style.css
@@ -18,17 +18,6 @@
          url('/fonts/roboto-v18-latin-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('/fonts/roboto-v18-latin-300italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
-  
-  /* roboto-500 - latin */
-  @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    src: local('Roboto Medium'), local('Roboto-Medium'),
-         url('/fonts/roboto-v18-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/fonts/roboto-v18-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  
   /* roboto-900 - latin */
   @font-face {
     font-family: 'Roboto';
@@ -196,7 +185,7 @@ table, td {width: 100%; height: 100%;
 #content {display: block; margin: 0 auto; text-align: left; max-width: 1050px; padding: 0 100px 0 100px;}
 h1 {text-align: center; font-weight: 900; font-size: 62px; line-height: 1em; padding-bottom: 20px; text-transform: lowercase;}
 h3 {text-align: left; padding-bottom: 10px; line-height: 1.5em;}
-h2 {font-size: 110%; line-height: 1.5em; margin-top: 2em!important; font-weight: 500;}
+h2 {font-size: 110%; line-height: 1.5em; margin-top: 2em!important;}
 [class^='home'] h1 {text-transform: none; font-size: 82px; margin-bottom: 2px; line-height: 1em;}
 .blog h1:after,
 .post h1:after,
