--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,17 +23,41 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-<title>{{ page.title }} | Usecue web development</title>
 <meta charset="utf-8" /> 
+<title>{{ page.title }} | {{ site.title }}</title>
+{% assign pagecontent_description = page.content | markdownify | replace: '.', '. ' | replace: '</h2>', ': ' | replace: '</h3>', ': ' | replace: '</h4>', ': ' | strip_html | strip_newlines | replace: '  ', ' ' | truncate: 160 %}
+<meta name="description" content="{% if pagecontent_description.size > 10 %}{{ pagecontent_description }}{% else %}{{ site.description }}{% endif %}">
+
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
 <link rel="apple-touch-icon" href="/img/icon-196x196.png" />
+
 <meta id="viewport" name="viewport" content="width=device-width">
+
+<!-- Facebook and Twitter integration -->
+<meta property="og:title" content="{{ page.title }}"/>
+{% if page.image %}<meta property="og:image" content="{{ page.image }}"/>{% endif %}
+<meta property="og:url" content="{{ site.canonical_url }}{{ page.url }}"/>
+<meta property="og:type" content="article">
+<meta property="og:image" content="{{ site.canonical_url }}{{ page.image }}"/>
+<meta property="og:site_name" content="{{ site.title }}"/>
+<meta property="og:description" content="{% if pagecontent_description.size > 10 %}{{ pagecontent_description }}{% else %}{{ site.description }}{% endif %}"/>
+
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@{{ site.twitter }}">
+<meta name="twitter:title" content="{{ page.title }}" />
+{% if page.image %}<meta name="twitter:image" content="{{ site.canonical_url }}{{ page.image }}" />{% endif %}
+<meta name="twitter:url" content="{{ site.canonical_url }}{{ page.url }}" />
+<meta name="twitter:description" content="{% if pagecontent_description.size > 10 %}{{ pagecontent_description }}{% else %}{{ site.description }}{% endif %}" />
+
+<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.canonical_url }}">
+<link rel="sitemap" type="application/xml" title="Sitemap" href="{{ "/sitemap.xml" | prepend: site.baseurl | prepend: site.canonical_url }}" />
+
 <script src="/js/jquery-1.7.2.min.js"></script>
 <script src="/js/typed.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/style.css">
-<script>
 
+<script>
 function next() {
 	if(document.getElementById('body').className == 'menu') {
 		document.getElementById('body').className = '';
@@ -174,10 +198,10 @@ $(window).resize( function() {
 	{% if page.layout == 'portfolio' %}<div id="backgroundtriangle" style="background-image: url(//images.weserv.nl/?url=www.usecue.com{{ page.image }}&w=500&h=1000&t=squaredown);"><div id="triangle-topleft" style="border-top-color: {{ page.color }};"></div></div>{% endif %}
 		<table cellpadding="0" cellspacing="0"><tr><td><div id="content">
     <div id="innercontrols" class="showmobile">
-        <a href="#" onclick="menu();" id="openmenu"><img src="/img/menu2.png" class="black" /><img src="/img/menu.png" class="white" /></a>
-        <a href="#" onclick="menu();" id="closemenu"><img src="/img/close2.png" class="black" /><img src="/img/close.png" class="white" /></a>
+        <a href="#" onclick="menu();" id="openmenu"><img src="/img/menu2.png" alt="menu" class="black" /><img src="/img/menu.png" class="white" /></a>
+        <a href="#" onclick="menu();" id="closemenu"><img src="/img/close2.png" alt="close" class="black" /><img src="/img/close.png" class="white" /></a>
         {% if page.layout == 'portfolio' or page.layout == 'post' %}
-        <a href="#" onclick="prev();"><img src="/img/back2.png" class="black" /><img src="/img/back.png" class="white" /></a>
-        <a href="#" onclick="next();"><img src="/img/next2.png" class="black" /><img src="/img/next.png" class="white" /></a>
+        <a href="#" onclick="prev();"><img src="/img/back2.png" alt="previous" class="black" /><img src="/img/back.png" class="white" /></a>
+        <a href="#" onclick="next();"><img src="/img/next2.png" alt="next" class="black" /><img src="/img/next.png" class="white" /></a>
         {% endif %}
     </div>
