--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
-/* roboto-300 - latin */
-@font-face {
+  /* roboto-300 - latin */
+  @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
@@ -18,6 +18,19 @@
          url('/fonts/roboto-v18-latin-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('/fonts/roboto-v18-latin-300italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
+
+  /* roboto-700 - latin */
+  @font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Roboto Bold'), local('Roboto-Bold'),
+         url('/fonts/roboto-v18-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('/fonts/roboto-v18-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  
+
+  
   /* roboto-900 - latin */
   @font-face {
     font-family: 'Roboto';
@@ -31,6 +44,7 @@
   
 * {margin: 0; padding: 0;}
 img {border: 0;}
+strong, b {font-weight: 700;}
 
 body, html {height: 100%; overflow-x: hidden;}
 body {overflow-y: auto;}
