--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,7 @@
 <meta name="twitter:url" content="{{ site.canonical_url }}{{ page.url }}" />
 <meta name="twitter:description" content="{% if pagecontent_description.size > 10 %}{{ pagecontent_description }}{% else %}{{ site.description }}{% endif %}" />
 
-<link rel="publisher" href="https://plus.google.com/+your_business_google_plus_id">
+<link rel="publisher" href="https://business.google.com/dashboard/l/00818181417419671775">
 
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.canonical_url }}">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="{{ "/sitemap.xml" | prepend: site.baseurl | prepend: site.canonical_url }}" />
