--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
 <link rel="sitemap" type="application/xml" title="Sitemap" href="{{ "/sitemap.xml" | prepend: site.baseurl | prepend: site.canonical_url }}" />
 
 <script src="/js/jquery-1.7.2.min.js"></script>
-<script src="/js/typed.js"></script>
+{% if page.layout == 'home' %}<script src="/js/typed.min.js"></script>{% endif %}
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 
 <script>
