--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,21 +37,21 @@
 <!-- Facebook and Twitter integration -->
 <meta property="og:title" content="{{ page.title }}"/>
 {% if page.image %}<meta property="og:image" content="{{ page.image }}"/>{% endif %}
-<meta property="og:url" content="{{ site.canonical_url }}{{ page.url }}"/>
+<meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
 <meta property="og:type" content="article">
-<meta property="og:image" content="{{ site.canonical_url }}{{ page.image }}"/>
+<meta property="og:image" content="{{ site.url }}{{ page.image }}"/>
 <meta property="og:site_name" content="{{ site.title }}"/>
 <meta property="og:description" content="{% if pagecontent_description.size > 10 %}{{ pagecontent_description }}{% else %}{{ site.description }}{% endif %}"/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@{{ site.twitter }}">
 <meta name="twitter:title" content="{{ page.title }}" />
-{% if page.image %}<meta name="twitter:image" content="{{ site.canonical_url }}{{ page.image }}" />{% endif %}
-<meta name="twitter:url" content="{{ site.canonical_url }}{{ page.url }}" />
+{% if page.image %}<meta name="twitter:image" content="{{ site.url }}{{ page.image }}" />{% endif %}
+<meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
 <meta name="twitter:description" content="{% if pagecontent_description.size > 10 %}{{ pagecontent_description }}{% else %}{{ site.description }}{% endif %}" />
 
-<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.canonical_url }}">
-<link rel="sitemap" type="application/xml" title="Sitemap" href="{{ "/sitemap.xml" | prepend: site.baseurl | prepend: site.canonical_url }}" />
+<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
+<link rel="sitemap" type="application/xml" title="Sitemap" href="{{ "/sitemap.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
 <script src="/js/jquery-1.7.2.min.js"></script>
 {% if page.layout == 'home' %}<script src="/js/typed.min.js"></script>{% endif %}
