--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 
 
 <div id="title" class="showmobile">Usecue <span>&nbsp;web development</span></div>
-</div></td></tr></table>
+</div></div></div></div>
 	</div>
 	
 	<div id="menu"><table cellpadding="0" cellspacing="0"><tr><td><div id="content">
