--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
   ga('send', 'pageview');
 
 </script>
-<script src="/js/particles.min.js"></script>
+{% if page.layout == 'home' %}<script src="/js/particles.min.js"></script>{% endif %}
 
 </body>
 
