--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,17 @@
 
 
 <div id="title" class="showmobile">Usecue <span>&nbsp;web development</span></div>
-</div></div></div></div>
-	</div>
-	
-	<div id="menu"><div class="table"><div class="tr"><div class="td"><div id="content">
+
+</div></div></div>
+
+	<div id="menu"><div class="outercontent"><div class="content">
 		    <a href="/">home.</a><br />
 		    <a href="/over-mij/">over mij.</a><br />
 		    <a href="/portfolio/">portfolio.</a><br />
 		    <a href="/blog/">blog.</a><br />
 		    <a href="/contact/">contact.</a><br />		
-	</div></div></div></div></div>
-</div>
+	</div></div></div>
+
 <div id="controls" class="showdesktop {{ page.layout }}">
 	<div id="innercontrols">
 		<a href="#" onclick="menu();" id="openmenu"><img src="/img/menu2.png" class="black" alt="menu" /><img src="/img/menu.png" class="white" alt="menu" /></a>
