--- a/_includes/header.html
+++ b/_includes/header.html
@@ -89,13 +89,13 @@ function prev() {
 var timeout;
 function menu() {
 	clearTimeout(timeout);
-	if(document.getElementById('body').className == 'menu') {
-		document.getElementById('body').className = '';
-		timeout = setTimeout(function(){document.getElementById('menu').style.zIndex = '-5'}, 600);
+	if($('body').hasClass('menu')) {
+		$('body').removeClass('menu'); 
+		timeout = setTimeout(function(){$('#menu').css('z-index','-5');}, 600);
 	}
 	else {
-		document.getElementById('menu').style.zIndex = '5'
-		document.getElementById('body').className = 'menu'; 
+		$('#menu').css('z-index','5')
+		$('body').addClass('menu'); 
 	}
 	return false;
 }
@@ -193,13 +193,12 @@ $(window).resize( function() {
 </script>
 </head>
 
-<body id="body">
-<div id="page" class="{{ page.layout }}">
-	<div id="innerpage" style="background-color: {{ page.color }};">
-	<div id="particles-js" style="z-index:0;"></div>
-    <div id="border"></div>
+<body id="body" style="background-color: {{ page.color }};" class="{{ page.layout }}">
+	<div id="particles-js"></div>
 	{% if page.layout == 'portfolio' %}<div id="backgroundtriangle" style="background-image: url(//images.weserv.nl/?url=www.usecue.com{{ page.image }}&w=500&h=1000&t=squaredown);"><div id="triangle-topleft" style="border-top-color: {{ page.color }};"></div></div>{% endif %}
-		<div class="table"><div class="tr"><div class="td"><div id="content">
+    
+    <div class="outercontent"><div class="content">
+        
     <div id="innercontrols" class="showmobile">
         <a href="#" onclick="menu();" id="openmenu"><img src="/img/menu2.png" alt="menu" class="black" /><img src="/img/menu.png" class="white" /></a>
         <a href="#" onclick="menu();" id="closemenu"><img src="/img/close2.png" alt="close" class="black" /><img src="/img/close.png" class="white" /></a>
@@ -208,3 +207,5 @@ $(window).resize( function() {
         <a href="#" onclick="next();"><img src="/img/next2.png" alt="next" class="black" /><img src="/img/next.png" class="white" /></a>
         {% endif %}
     </div>
+
+    <div class="innercontent">
