--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,29 +61,21 @@
 
 <script>
 function next() {
-	if(document.getElementById('body').className == 'menu') {
-		document.getElementById('body').className = '';
+	if($('body').hasClass('menu')) {
+		$('body').removeClass('menu');
 		setTimeout(function(){next()}, 400);
 		return false;
 	}
-	document.getElementById('controls').style.display = 'none'; 
-	document.getElementById('innerpage').className = 'next'; 
-	setTimeout(function(){
-		document.location.href='{% if num_of_pages > next_i %}{{ sorted_pages[next_i].url }}{% else %}{{ sorted_pages[0].url }}{% endif %}';
-	}, 350);
+	document.location.href='{% if num_of_pages > next_i %}{{ sorted_pages[next_i].url }}{% else %}{{ sorted_pages[0].url }}{% endif %}';
 	return false;
 }
 function prev() {
-	if(document.getElementById('body').className == 'menu') {
-		document.getElementById('body').className = '';
+	if($('body').hasClass('menu')) {
+		$('body').removeClass('menu');
 		setTimeout(function(){prev()}, 400);
 		return false;
 	}
-	document.getElementById('controls').style.display = 'none'; 
-	document.getElementById('innerpage').className = 'prev'; 
-	setTimeout(function(){
-		document.location.href='{% if prev_i < 0 %}{{ sorted_pages[last_i].url }}{% else %}{{ sorted_pages[prev_i].url }}{% endif %}';
-	}, 350);
+	document.location.href='{% if prev_i < 0 %}{{ sorted_pages[last_i].url }}{% else %}{{ sorted_pages[prev_i].url }}{% endif %}';
 	return false;
 }
 var timeout;
