--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,7 +44,7 @@
 
 </script>
 {% if page.layout == 'home' %}<script src="/js/particles.min.js"></script>{% endif %}
-
+{% include open-embed.html %}
 </body>
 
 </html>
