--- a/_includes/header.html
+++ b/_includes/header.html
@@ -178,7 +178,7 @@ $(window).resize( function() {
 </script>
 </head>
 
-<body id="body" {% if page.color %}style="background-color: {{ page.color }};"{% endif %} class="{{ page.layout }}">
+<body id="body" {% if page.color %}style="background: {{ page.color }};"{% endif %} class="{{ page.layout }}">
 	<div id="particles-js"></div>
 	{% if page.layout == 'portfolio' %}<div id="backgroundtriangle" style="background-image: url(//images.weserv.nl/?url=www.usecue.com{{ page.image }}&w=500&h=1000&t=squaredown);"><div id="triangle-topleft" style="border-top-color: {{ page.color }};"></div></div>{% endif %}
     
