--- a/_includes/header.html
+++ b/_includes/header.html
@@ -184,7 +184,7 @@ $(window).resize( function() {
 
 <body id="body" {% if page.color %}style="background{% if page.layout == '404' %}-color{% endif %}: {{ page.color }};"{% endif %} class="{{ page.layout }}">
 	<div id="particles-js"></div>
-	{% if page.layout == 'portfolio' %}<div id="backgroundtriangle" style="background-image: url(//images.weserv.nl/?url=www.usecue.com{{ page.image }}&w=500&h=1000&t=squaredown);"><div id="triangle-topleft" style="border-top-color: {{ page.color }};"></div></div>{% endif %}
+	{% if page.layout == 'portfolio' %}<div id="backgroundtriangle" style="background-image: url(//images.weserv.nl/?url=www.usecue.nl{{ page.image }}&w=500&h=1000&t=squaredown);"><div id="triangle-topleft" style="border-top-color: {{ page.color }};"></div></div>{% endif %}
     
     <div class="outercontent"><div class="content">
         
