--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
 	<div class="title showdesktop">Usecue <span>&nbsp;web development</span></div>
 </div>
 
-<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/fonts.css">
 <script>
 /*! modernizr 3.6.0 (Custom Build) | MIT *
  * https://modernizr.com/download/?-webp-setclasses !*/
