--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 {% include header.html %}
 
-<h3>{{ page.date | date: "%d.%m.%Y" }}</h3>
-<h1>{{ page.title }}</h1>
-
-<div>
-{{ content }}
+<div class="fullscreen">
+    <h1 class="large"><div id="postdate" class="small" style="text-transform: lowercase;">{{ page.date | date: "%e %B %Y" | replace: "January", "januari" | replace: "February", "februari" | replace: "March", "maart" | replace: "April", "april" | replace: "May", "mei" | replace: "June", "juni" | replace: "July", "juli" | replace: "August", "augustus" | replace: "September", "september" | replace: "October", "oktober" | replace: "November", "november" | replace: "December", "december" }}</div>{{ page.title }}</h1>
 </div>
+<div id="scrolldown">^</div>
+
+{{ content }}
 
 {% include footer.html %}
