--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
             {% endfor %}
             <a id="nextlink" href="{{ sitepages[next_i].url }}">next<span class="desktop">: {{ sitepages[next_i].title }}</span><span class="mobile"> {% if page.layout == 'post' %}blog bericht{% else %}portfolio item{% endif %}</span></a>
         {% endif %}
-        <a id="scrolltotop" href="#top">Scroll naar boven</a>
+        <a id="scrolltotop" href="#top">Naar boven</a>
     </div>
 
     <script src="/js/javascript.js"></script>
