--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,7 @@
         <a id="scrolltotop" href="#top">Naar boven</a>
     </div>
 
+    <div id="lightbox"></div>
     <script src="/js/javascript.js"></script>
 
 </body>
