--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -64,6 +64,6 @@
 
 {{ content }}
 
-<p><a href="{{ page.portfolio_url }}" rel="noopener" target="_blank">bekijk project &rarr;</a></p>
+<p><a href="{{ page.portfolio_url }}" rel="noopener" target="_blank">bekijk website &rarr;</a></p>
 
 {% include footer.html %}
