--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -58,7 +58,7 @@
         </div>
     </a>
 </div>
-<div id="scrolldown">^</div>
+<div id="scrolldown"></div>
 
 <h1 class="large">{{ page.title }}</h1>
 
