--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -79,6 +79,6 @@
     </div>
 </div>
 
-<p style="text-align: center; padding-top: 1.4em;"><br /><a href="{{ page.portfolio_url }}" rel="noopener" target="_blank" class="btn">bekijk website &rarr;</a></p>
+<p style="padding-top: 1.4em;"><br /><a href="{{ page.portfolio_url }}" rel="noopener" target="_blank" class="btn">bekijk website</a></p>
 
 {% include footer.html %}
