--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
 
 </head>
 
-<body id="top" class="{{ page.layout }}{% if page.layout == 'error' %} home{% endif %}{% if page.color %} bgcolor{% endif %}" style="{% if page.color %}background-color: {{ page.color }} url(/img/pattern1.png) left top;{% endif %}">
+<body id="top" class="{{ page.layout }}{% if page.layout == 'error' %} home{% endif %}{% if page.color %} bgcolor{% endif %}" style="{% if page.color %}background: {{ page.color }} url(/img/pattern1.png) left top;{% endif %}">
   {% if page.layout == 'home' %}
     <div id="splash">
       <div><span class="medium"><span><a href="/about/">u</a></span><span>s</span><span>e</span><span>c</span><span>u</span><span>e</span></span><span class="small">web development</span></div>
