--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,7 @@
             <a id="prevlinktop" href="{{ sitepages[prev_i].url }}">vorige {% if page.layout == 'post' %}artikel{% else %}item{% endif %}</a>
         {% endif %}
         <a id="scrolltotop" href="#top">Naar boven</a>
+        <a id="darkmode" href="#" onclick="document.getElementById('top').classList.toggle('darkmode'); this.classList.toggle('selected'); this.blur();"></a>
     </div>
 
     <div id="lightbox"></div>
