--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,12 +24,12 @@
             <a id="prevlinktop" href="{{ sitepages[prev_i].url }}">vorige {% if page.layout == 'post' %}artikel{% else %}item{% endif %}</a>
         {% endif %}
         <a id="scrolltotop" href="#top">Naar boven</a>
-        <a id="darkmode" href="#" onclick="toggleDarkmode()">mode</a>
+        <a id="darkmode" href="#" onclick="toggleDarkmode()"></a>
         <script>
             if (localStorage.getItem('mode') == 'dark') document.getElementById('darkmode').classList.add('selected'); 
         </script>
     </div>
-    
+
     <div id="darkmodeoverlay"></div>
 
     <div id="lightbox"></div>
