--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,10 +24,7 @@
             <a id="prevlinktop" href="{{ sitepages[prev_i].url }}">vorige {% if page.layout == 'post' %}artikel{% else %}item{% endif %}</a>
         {% endif %}
         <a id="scrolltotop" href="#top">Naar boven</a>
-        <a id="darkmode" href="#" onclick="toggleDarkmode()" title="toggle dark mode"></a>
-        <script>
-            if (localStorage.getItem('mode') == 'dark') document.getElementById('darkmode').classList.add('selected'); 
-        </script>
+        <a id="lightmode" href="#" onclick="toggleLightmode()" title="toggle light mode"></a>
     </div>
 
     <div id="darkmodeoverlay"></div>
