--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+
+
+
+<meta http-equiv = "refresh" content = "0;URL=https://www.usecue.com/nl{{ page.url }}" />
+
+
+
+
 <meta charset="utf-8" /> 
 <title>{{ page.title }} | {{ site.title }}</title>
 {% assign pagecontent_description = page.content | markdownify | replace: '.', '. ' | replace: '</h2>', ': ' | replace: '</h3>', ': ' | replace: '</h4>', ': ' | strip_html | strip_newlines | replace: '  ', ' ' | truncate: 160 %}
